--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html> 
-<html lang="pt-BR"> 
-<head> 
-	
-	<meta charset="utf-8"> 
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+
+	<meta charset="utf-8">
 	<meta name = "viewport" content="width=device-width, maximum-scale=1">
 
 	<title>my open source gallery</title>
@@ -12,7 +12,7 @@
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-</head> 
+</head>
 <body>
 
 	<footer>
@@ -25,8 +25,9 @@
 
 	<script>
 		// you're not Clark Kent, right?
-		$('body').hubMe({'username': 'clark-kent'});
+		$('body').hubMe({'username': 'jampow'});
 	</script>
 
-</body> 
+</body>
 </html>
+
