--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<img src="img/github.png" alt="Github's Logo" />
 	</footer>
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
 	<script src="scripts/css3-mediaqueries.js"></script>
 	<script src="scripts/hub.me.js"></script>
 
